--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
             - |
                 composer install
                 php artisan migrate
+                php artisan db:seed
                 php artisan serve --host=0.0.0.0 --port=8000
     db:
         image: mysql:8.0.30
