--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "php-open-source-saver/jwt-auth": "^2.8",
+        "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-permission": "^6.18"
     },
     "require-dev": {
