--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
         command:
             - |
                 composer install
-                php artisan migrate
+                php artisan migrate --seed
                 php artisan serve --host=0.0.0.0 --port=8000
     db:
         image: mysql:8.0.30
